java_library/trunk/smxParser.java
// $ANTLR 3.0.1 smx.g 2008-02-12 13:33:56

	import org.w3c.dom.*;
	import javax.xml.parsers.*;
	import java.util.ArrayList;
	import java.util.HashMap;
	import java.util.Map;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class smxParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "TAG", "CHILDREN", "DATA", "DTAG", "ATTRIBS", "ATTR", "VALUE", "DSCLOSER", "SCLOSER", "CLOSER", "NAM", "COMMENT", "TAGLET", "WS", "NL", "HASH", "STRING", "WAKA", "NAME", "AND", "EQ", "SYMBOLS", "BANG", "SYMBOL", "PCHAR", "ESC"
    };
    public static final int WAKA=21;
    public static final int DSCLOSER=11;
    public static final int HASH=19;
    public static final int WS=17;
    public static final int BANG=26;
    public static final int EQ=24;
    public static final int STRING=20;
    public static final int DATA=6;
    public static final int COMMENT=15;
    public static final int VALUE=10;
    public static final int ESC=29;
    public static final int TAGLET=16;
    public static final int AND=23;
    public static final int NL=18;
    public static final int ATTR=9;
    public static final int NAM=14;
    public static final int SCLOSER=12;
    public static final int EOF=-1;
    public static final int ATTRIBS=8;
    public static final int SYMBOL=27;
    public static final int SYMBOLS=25;
    public static final int CHILDREN=5;
    public static final int TAG=4;
    public static final int CLOSER=13;
    public static final int NAME=22;
    public static final int PCHAR=28;
    public static final int DTAG=7;

        public smxParser(TokenStream input) {
            super(input);
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return tokenNames; }
    public String getGrammarFileName() { return "smx.g"; }


    	private String ws_atype = null;
    	private boolean has_smx_tag = false;
    	private boolean allow_smx_tag = true;
    	private Document curdoc;
    	private Map<String, Integer> countvars = new HashMap<String, Integer>();

    	public boolean lvlPreCheck(int lvl) throws RecognitionException {
    		return input.LT(1).getType()==WS && getLvl(input.LT(1).getText()) > lvl;
    	}
    	
    	public int getLvl(String t) throws RecognitionException {
    		if(ws_atype == null) ws_atype = t.charAt(0) == ' ' ? "\t" : " ";
    		if(t.contains(ws_atype)) throw new RecognitionException();
    		return t.length();
    	}
    	
    	public Node makeEnt(List<Taglet> l, Node root) {
    		for(Taglet t : l) {
    			// TODO: Namespace
    			System.out.println("Adding element "+t.name);
    			Element el = curdoc.createElement(t.name);
    			
    			for (Map.Entry<String,String> atr : t.attrs.entrySet()) {
    				// TODO: Namespace
    				el.setAttribute(atr.getKey(), atr.getValue());
    			}
    			root = root.appendChild(el);
    		}
    		return root;
    	}
    	
    	public Taglet apply(Taglet t, ContextObj ctx) {
    		// order merge(global, local, this)
    		String name = null;
    		System.out.println("Applying ctx to "+t.name);
    		Map<String,String> atrs = new HashMap<String,String>();
    		
    		if(!ctx.ignore_global) {
    			name = ctx.nam_pat_g;
    			atrs.putAll(ctx.attribs_g);
    		}
    		
    		if(ctx.nam_pat != null) {
    			name = merge(merge(name, ctx.nam_pat), t.name);
    			atrs = merge(merge(atrs, ctx.attribs), t.attrs);
    		}
    	
    		for(String key : atrs.keySet()) {
    			String val = atrs.get(key);
    				if(val.equals("!")) atrs.remove(key);
    			else if(!Character.isLetter(val.charAt(0))) {
    				// TODO: key=@!(@ == key="@!(@"
    				if(!countvars.containsKey(val))
    					countvars.put(key, 0);
    				atrs.put(key, countvars.get(val).toString());
    				countvars.put(val, countvars.get(val)+1);
    			}
    		}
    	
    		t.name = name == null ? t.name : name;
    		t.attrs = atrs;
    		System.out.println("\tResulted in "+t.name);
    		return t;
    	}
    	
    	public void del_ctx(ContextObj ctx, int type, Taglet pat)
    	 throws RecognitionException {
    	 	int numBangs = 0;
    	 	while(pat.name.charAt(numBangs++) == '!');
    	 
    	 	if((type != SCLOSER && type != DSCLOSER) || numBangs > 3) {
    	 	   throw new RecognitionException();
    	 	}
    	 	
    	 	if(numBangs == 1 || numBangs == 3) {
    	 		// ! *>    # delete the local context
    	 		// ! **>   # delete the local context
    	 		ctx.nam_pat = null;
    	 		ctx.attribs = new HashMap<String, String>();
    	 	}
    	 	
    	 	if(numBangs == 2 || numBangs == 3) {
    		 	if(type == SCLOSER) {
    		 		// !! *>   # set ignore_global for children
    		 		ctx.ignore_global = true;
    		 	} else if (type == DSCLOSER) {
    		 		// !! **>  # delete the global context
    		 		ctx.nam_pat_g = null;
    	 			ctx.attribs_g = new HashMap<String, String>();
    		 	}
    	 	}
    	}
    	
    	public static Map<String, String> merge (Map<String, String> ctx,
    								             Map<String, String> prtn) {
    		Map<String, String> m = new HashMap<String,String>(ctx);
    		for(Map.Entry<String, String> atr : m.entrySet()) {
    			if(atr.getValue().equals("!")) {
    				m.remove(atr.getKey());
    			} else {
    				m.put(atr.getKey(), merge(m.get(atr.getKey()), atr.getValue()));
    			}
    		}
    		return m;
    	}
    	
    	public static String merge (String ctx, String ptrn) {
    		if(ctx != null && ctx.contains("*"))
    			return ctx.replaceAll("\\*", ptrn);
    		else
    			return ptrn;
    	}

    	public void update_ctx(ContextObj ctx, int type, Taglet pat)
    	 throws RecognitionException {
    		// del any preceding !'s on pat.name
    		int i=0;
    		while(pat.name.charAt(i++) == '!');
    		pat.name = pat.name.substring(i);
    		
    		if(type == SCLOSER) {
    			ctx.nam_pat = merge(ctx.nam_pat, pat.name);
    			ctx.attribs = merge(ctx.attribs, pat.attrs);
    		} else if (type == DSCLOSER) {
    			ctx.nam_pat_g = merge(ctx.nam_pat_g, pat.name);
    			ctx.attribs_g = merge(ctx.attribs_g, pat.attrs);
    		} else {
    			throw new RecognitionException();
    		}
    	}
    	
    	private class Taglet {
    		String name;
    		Map<String, String> attrs;
    		
    		public Taglet(Tree p) {
    			name = p.getChild(0).getChild(0).getText();
    			System.out.println("Created taglet " + name);
    			Tree atrs = p.getChild(1);
    			attrs = new HashMap<String, String>();
    			for(int i = 0; i < atrs.getChildCount(); i++) {
    				Tree t = atrs.getChild(i);
    				String nam = t.getChild(0).getText();
    				String val = t.getChild(1).getText();
    				attrs.put(nam, val);
    				System.out.println("\t"+nam+"="+val);
    			}
    		}
    	}
    	
       private class ContextObj {
          public String nam_pat_g = null;
          public String nam_pat   = null;
          public Map<String, String> attribs_g  = new HashMap<String,String>();
          public Map<String, String> attribs    = new HashMap<String,String>();
          boolean ignore_global	= false; 
          // creating a new obj, this is always false
          // to make it have a single generation lifespan
          
          public ContextObj(String nam_pat_g, String nam_pat, 
           Map<String, String> attribs_g, Map<String, String> attribs) {
             this.nam_pat_g = nam_pat_g;
             this.nam_pat   = nam_pat;
             this.attribs_g = new HashMap<String,String>(attribs_g);
             this.attribs   = new HashMap<String,String>(attribs);
          }
          
          public ContextObj(ContextObj c) {
             nam_pat_g = c.nam_pat_g;
             nam_pat = c.nam_pat;
             attribs_g = c.attribs_g;
             attribs = c.attribs;
          }
          
          public ContextObj() {}
       }


    public static class smx_return extends ParserRuleReturnScope {
        public Document retdoc;
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start smx
    // smx.g:214:1: smx[DocumentBuilderFactory dbf] returns [Document retdoc] : a= line[new ContextObj(), curdoc] ({...}? =>b= line[new ContextObj(), curdoc ] )? EOF -> {has_smx_tag}? $b -> $a;
    public final smx_return smx(DocumentBuilderFactory dbf) throws RecognitionException {
        smx_return retval = new smx_return();
        retval.start = input.LT(1);
        int smx_StartIndex = input.index();
        Tree root_0 = null;

        Token EOF1=null;
        line_return a = null;

        line_return b = null;


        Tree EOF1_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_line=new RewriteRuleSubtreeStream(adaptor,"rule line");

        	DocumentBuilder db = null;
        	try {
        		db = dbf.newDocumentBuilder();
        	}catch (Exception e) {
        		throw new RecognitionException();
        	}
        	curdoc = db.newDocument();

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 1) ) { return retval; }
            // smx.g:226:2: (a= line[new ContextObj(), curdoc] ({...}? =>b= line[new ContextObj(), curdoc ] )? EOF -> {has_smx_tag}? $b -> $a)
            // smx.g:227:2: a= line[new ContextObj(), curdoc] ({...}? =>b= line[new ContextObj(), curdoc ] )? EOF
            {
            pushFollow(FOLLOW_line_in_smx119);
            a=line(new ContextObj(),  curdoc);
            _fsp--;

            stream_line.add(a.getTree());

            	if(a != null){
            		CommonTree t = ((CommonTree)((Tree)a.tree));
            		if(t.getType() == TAG) {
            			String nam = ""+(t.getFirstChildWithType(TAGLET)).getChild(0).getChild(0);
            			String closer = "";
            			Tree cls = t.getFirstChildWithType(CLOSER);
            			for(int i=0; i < cls.getChildCount(); i ++) {
            				closer += cls.getChild(i);
            			}
            			if(nam.equals("config") && closer.equals("smx>")) {
            				System.out.println("Found smx config");
            				has_smx_tag = true;
            				Document tmp = retval.retdoc;
            				curdoc = db.newDocument();
            				//    set global options  from tmp
            				//      xml header type
            			}
            		}
            	}
            	
            // smx.g:249:2: ({...}? =>b= line[new ContextObj(), curdoc ] )?
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( ((LA1_0>=TAG && LA1_0<=WS)||(LA1_0>=HASH && LA1_0<=ESC)) && (has_smx_tag)) {
                alt1=1;
            }
            switch (alt1) {
                case 1 :
                    // smx.g:249:3: {...}? =>b= line[new ContextObj(), curdoc ]
                    {
                    if ( !(has_smx_tag) ) {
                        throw new FailedPredicateException(input, "smx", "has_smx_tag");
                    }
                    System.out.println("Parsing real document...");
                    pushFollow(FOLLOW_line_in_smx137);
                    b=line(new ContextObj(),  curdoc );
                    _fsp--;

                    stream_line.add(b.getTree());

                    }
                    break;

            }

            EOF1=(Token)input.LT(1);
            match(input,EOF,FOLLOW_EOF_in_smx146); 
            stream_EOF.add(EOF1);


            // AST REWRITE
            // elements: b, a
            // token labels: 
            // rule labels: a, retval, b
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_a=new RewriteRuleSubtreeStream(adaptor,"token a",a!=null?a.tree:null);
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);
            RewriteRuleSubtreeStream stream_b=new RewriteRuleSubtreeStream(adaptor,"token b",b!=null?b.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 253:3: -> {has_smx_tag}? $b
            if (has_smx_tag) {
                adaptor.addChild(root_0, stream_b.next());

            }
            else // 254:3: -> $a
            {
                adaptor.addChild(root_0, stream_a.next());

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);


            	retval.retdoc = curdoc;

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end smx

    public static class line_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start line
    // smx.g:257:1: line[ContextObj ctx, Node n] : (lvl= WS )? ( comment[n] | tag[level, ctx, n] | dtag[ctx, n] | data[n] ) -> ( comment )? ( tag )? ( dtag )? ( data )? ;
    public final line_return line(ContextObj ctx, Node n) throws RecognitionException {
        line_return retval = new line_return();
        retval.start = input.LT(1);
        int line_StartIndex = input.index();
        Tree root_0 = null;

        Token lvl=null;
        comment_return comment2 = null;

        tag_return tag3 = null;

        dtag_return dtag4 = null;

        data_return data5 = null;


        Tree lvl_tree=null;
        RewriteRuleTokenStream stream_WS=new RewriteRuleTokenStream(adaptor,"token WS");
        RewriteRuleSubtreeStream stream_data=new RewriteRuleSubtreeStream(adaptor,"rule data");
        RewriteRuleSubtreeStream stream_tag=new RewriteRuleSubtreeStream(adaptor,"rule tag");
        RewriteRuleSubtreeStream stream_comment=new RewriteRuleSubtreeStream(adaptor,"rule comment");
        RewriteRuleSubtreeStream stream_dtag=new RewriteRuleSubtreeStream(adaptor,"rule dtag");
        int level=0;
        try {
            if ( backtracking>0 && alreadyParsedRule(input, 2) ) { return retval; }
            // smx.g:258:20: ( (lvl= WS )? ( comment[n] | tag[level, ctx, n] | dtag[ctx, n] | data[n] ) -> ( comment )? ( tag )? ( dtag )? ( data )? )
            // smx.g:259:2: (lvl= WS )? ( comment[n] | tag[level, ctx, n] | dtag[ctx, n] | data[n] )
            {
            // smx.g:259:5: (lvl= WS )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==WS) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // smx.g:259:5: lvl= WS
                    {
                    lvl=(Token)input.LT(1);
                    match(input,WS,FOLLOW_WS_in_line180); 
                    stream_WS.add(lvl);


                    }
                    break;

            }

            level = lvl != null ? getLvl(lvl.getText()) : 0;
            // smx.g:260:2: ( comment[n] | tag[level, ctx, n] | dtag[ctx, n] | data[n] )
            int alt3=4;
            alt3 = dfa3.predict(input);
            switch (alt3) {
                case 1 :
                    // smx.g:260:3: comment[n]
                    {
                    pushFollow(FOLLOW_comment_in_line187);
                    comment2=comment(n);
                    _fsp--;

                    stream_comment.add(comment2.getTree());

                    }
                    break;
                case 2 :
                    // smx.g:260:16: tag[level, ctx, n]
                    {
                    pushFollow(FOLLOW_tag_in_line192);
                    tag3=tag(level,  ctx,  n);
                    _fsp--;

                    stream_tag.add(tag3.getTree());

                    }
                    break;
                case 3 :
                    // smx.g:260:37: dtag[ctx, n]
                    {
                    pushFollow(FOLLOW_dtag_in_line197);
                    dtag4=dtag(ctx,  n);
                    _fsp--;

                    stream_dtag.add(dtag4.getTree());

                    }
                    break;
                case 4 :
                    // smx.g:260:52: data[n]
                    {
                    pushFollow(FOLLOW_data_in_line202);
                    data5=data(n);
                    _fsp--;

                    stream_data.add(data5.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: comment, data, dtag, tag
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = (Tree)adaptor.nil();
            // 261:2: -> ( comment )? ( tag )? ( dtag )? ( data )?
            {
                // smx.g:261:5: ( comment )?
                if ( stream_comment.hasNext() ) {
                    adaptor.addChild(root_0, stream_comment.next());

                }
                stream_comment.reset();
                // smx.g:261:14: ( tag )?
                if ( stream_tag.hasNext() ) {
                    adaptor.addChild(root_0, stream_tag.next());

                }
                stream_tag.reset();
                // smx.g:261:19: ( dtag )?
                if ( stream_dtag.hasNext() ) {
                    adaptor.addChild(root_0, stream_dtag.next());

                }
                stream_dtag.reset();
                // smx.g:261:25: ( data )?
                if ( stream_data.hasNext() ) {
                    adaptor.addChild(root_0, stream_data.next());

                }
                stream_data.reset();

            }



            }

            retval.stop = input.LT(-1);

                retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end line

    public static class dot_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start dot
    // smx.g:263:1: dot : (~ NL )* ;
    public final dot_return dot() throws RecognitionException {
        dot_return retval = new dot_return();
        retval.start = input.LT(1);
        int dot_StartIndex = input.index();
        Tree root_0 = null;

        Token set6=null;

        Tree set6_tree=null;

        try {
            if ( backtracking>0 && alreadyParsedRule(input, 3) ) { return retval; }
            // smx.g:263:4: ( (~ NL )* )
            // smx.g:263:6: (~ NL )*
            {
            root_0 = (Tree)adaptor.nil();

            // smx.g:263:6: (~ NL )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( ((LA4_0>=TAG && LA4_0<=WS)||(LA4_0>=HASH && LA4_0<=ESC)) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // smx.g:263:6: ~ NL
            	    {
            	    set6=(Token)input.LT(1);
            	    if ( (input.LA(1)>=TAG && input.LA(1)<=WS)||(input.LA(1)>=HASH && input.LA(1)<=ESC) ) {
            	        input.consume();
            	        adaptor.addChild(root_0, adaptor.create(set6));
            	        errorRecovery=false;
            	    }
            	    else {
            	        MismatchedSetException mse =
            	            new MismatchedSetException(null,input);
            	        recoverFromMismatchedSet(input,mse,FOLLOW_set_in_dot228);    throw mse;
            	    }


            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

                retval.tree = (Tree)adaptor.rulePostProcessing(root_0);
                adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return retval;
    }
    // $ANTLR end dot

    public static class comment_return extends ParserRuleReturnScope {
        Tree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start comment
    // smx.g:264:1: comment[Node n] : ( HASH )+ WS d= dot NL ->;
    public final comment_return comment(Node n) throws RecognitionException {
        comment_return retval = new comment_return();
        retval.start = input.LT(1);
        int comment_StartIndex = input.index();
        Tree root_0 = null;

        Token HASH7=null;
        Token WS8=null;
        Token NL9=null;
        dot_return d = null;

